<?xml version="1.0"?>
<package format="2">
  <name>robile_environments</name>
  <version>0.0.0</version>
  <description>robile_environments</description>

  <maintainer email="sushant.chavan@smail.inf.h-brs.de.com">Sushant Chavan</maintainer>
  <author email="sushant.chavan@smail.inf.h-brs.de.com">Sushant Chavan</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
